tests/expectations/compiler/tuple/access_negative_fail.out
Error [EPAR0370005]: expected an identifier, an integer literal -- found '-'
    --> compiler-test:7:20
     |
   7 |     return (t.0, t.-1); // Index `t.-1` is invalid.
     |                    ^
